postane/postane.css
#postane {
  width: auto;
  border: 3px solid #44749d;
  padding: 10px;
  min-height: 560px;
  // background-color: #F2F7FC;
  border-radius: 10px;
}

body.dark-mode #postane {
  background-color: #2F516E;
  border: 3px solid #5897CC;
}

body:not(.dark-mode) #postane {
  background-color: #F2F7FC;
  border: 3px solid #44749d;
}

#postane_thread_container {
  height: 460px;
  overflow-y: scroll;
  margin-bottom: 10px;
  padding: 5px;
}

#postane_message_container {
  height: 350px;
  overflow-y: scroll;
  padding: 5px;
  margin-bottom: 10px;
}

#postane_back img {
  height: 40px;
}

#postane_loading img {
  width: 150px;
}

#postane p {
  margin: 0;
}

#postane_notification img {
  box-shadow: none;
}

#postane img {
  margin: 0;
}

#postane_back {
  display: inline-block;
  margin-top: 20px;
  cursor: pointer;
}

#postane_godmode_button {
  text-align: center;
  margin-top: 20px;
  cursor: pointer;
  background: linear-gradient(#2F516E, #44749D) repeat scroll 0 0 rgba(0, 0, 0, 0);
  padding: 5px 10px;
  font-weight: bold;
  box-shadow: 2px 2px 4px #3D3D3D;
  border-radius: 4px;
}

#postane_godmode_button:hover {
  background: linear-gradient(#44749D, #2F516E) repeat scroll 0 0 rgba(0, 0, 0, 0);
}

#postane_godmode_button a{
  color: white;
  text-decoration: none;
}

#postane_godmode_button a:hover {
  text-decoration: underline;
}

#postane_loading {
  text-align: center;
}

#postane_threads {
  position: relative;
}

#postane_loading img {
  display: inline-block;
}

#postane_threads_topmenu {
  margin-bottom: 20px;
}

#postane_new_thread_toggle {
  cursor: pointer;
  background: linear-gradient(#2F516E, #44749D) repeat scroll 0 0 rgba(0, 0, 0, 0);
  text-align: center;
  color: white;
  font-size: 15px;
  font-weight: bold;
  padding: 4px;
  box-shadow: 2px 2px 4px #3D3D3D;
  border-radius: 10px 10px 0 0;
}

#postane_new_thread_toggle:hover {
  background: linear-gradient(#44749D, #2F516E) repeat scroll 0 0 rgba(0, 0, 0, 0);
}

#postane_new_thread_toggle img{
  display: inline-block;
  width: 30px;
}

#postane_new_thread {
  display: none;
  background: linear-gradient(#44749D, #5897CC) repeat scroll 0 0 rgba(0, 0, 0, 0);
  color: white;
  padding: 10px;
  border-radius: 0 0 10px 10px;
  box-shadow: 2px 2px 4px #3D3D3D;
}

.postane_thread {
  cursor: pointer;
  border-bottom: 2px solid #44749d;
  padding: 3px 10px;
  margin-bottom: 5px;
  border-radius: 15px;
}

.postane_thread:hover {
  background: linear-gradient(#44749D, #5897CC) repeat scroll 0 0 rgba(0, 0, 0, 0);
  color: white;
}

.postane_thread_buttons_div {
  float: right;
}

.postane_thread_buttons_div div {
  width: 18px;
  display: inline-block;
  padding: 2px;
  margin: 0 4px;
}

.postane_thread_buttons_div div:hover {
  background-color: #33638c;
}

.postane_thread_title {
  display: inline-block;
  width: 80%;
}

.postane_thread_buttons_div {
  display: inline-block;
  height: 20px;
}

.postane_thread_date {
  text-align: right;
  font-size: 12px;
  font-style: italic;
}

.postane_thread_unread {
  background-color: #c6d4e1;
}

.postane_thread_quit_thread img,
.postane_thread_remove_messages img {
  background: linear-gradient(#2F516E, #44749D) repeat scroll 0 0 rgba(0, 0, 0, 0);
  padding: 2px 4px;
}

.postane_thread_quit_thread img:hover,
.postane_thread_remove_messages img:hover {
  background: linear-gradient(#44749D, #2F516E) repeat scroll 0 0 rgba(0, 0, 0, 0);
}

#postane_new_thread_title {
  cursor: text;
  min-height: 30px;
  background-color: white;
  color: black;
  border: 1px solid #fff;
  margin-bottom: 10px;
  border-radius: 5px;
}

#postane_new_participant {
  margin-bottom: 20px;
}

#postane_new_participant,
#postane_new_thread_participants {
  cursor: text;
  height: 30px;
  width: 200px;
  background-color: white;
  color: black;
  border: 1px solid #fff;
  margin-bottom: 5px;
  border-radius: 5px;
}

#postane_new_thread_message {
  cursor: text;
  min-height: 100px;
  background-color: white;
  color: black;
  border: 1px solid #fff;
  margin-bottom: 10px;
  border-radius: 5px;
}

#postane_new_message {
  cursor: text;
  min-height: 50px;
  background-color: white;
  color: black;
  border: 1px solid #B0C4DE;
  margin-bottom: 20px;
  border-radius: 5px;
}

#postane_new_participants_send,
.postane_messages_edit_action_button,
#postane_new_message_send {
  display: inline-block;
  cursor: pointer;
  border: 1px solid #556270;
  background: linear-gradient(#44749D, #2F516E) repeat scroll 0 0 rgba(0, 0, 0, 0);
  color: white;
  padding: 3px 30px;
  margin: 0 10px;
  border-radius: 10px;
}

#postane_new_message_send {
  float: right;
}

#postane_new_participants_send:hover,
.postane_messages_edit_action_button:hover,
#postane_new_message_send:hover {
  background: linear-gradient(#2F516E, #44749D) repeat scroll 0 0 rgba(0, 0, 0, 0);
}

.postane_messages_cancel_edit_button {
  cursor: pointer;
  margin-left: 7px;
  display: inline-block;
  color: #4ecdc4;
}

.postane_messages_cancel_edit_button:hover {
  color: #556270;
}

#postane_new_thread_send {
  cursor: pointer;
  display: inline-block;
  border: 1px solid #556270;
  background: linear-gradient(#44749D, #2F516E) repeat scroll 0 0 rgba(0, 0, 0, 0);
  color: white;
  padding: 3px 30px;
  border-radius: 10px;
  margin: 0 10px;
}

#postane_new_thread_send:hover {
  background: linear-gradient(#2F516E, #44749D) repeat scroll 0 0 rgba(0, 0, 0, 0);
}

#postane_new_participant_list,
#postane_new_thread_participant_list {
  display: none;
  background-color: #44749d;
  padding: 5px 10px;
  margin-bottom: 10px;
}

.postane_new_existing_participant,
.postane_existing_participant {
  display: inline-block;
  font-size: 12px;
  background-color: #0f0;
  color: black;
  margin: 5px;
  padding: 3px 5px;
}

.postane_new_nonexisting_participant,
.postane_nonexisting_participant {
  display: inline-block;
  font-size: 12px;
  background-color: #f00;
  color: white;
  margin: 5px;
  padding: 3px 5px;
}

.postane_new_existing_participant:hover,
.postane_new_nonexisting_participant:hover,
.postane_existing_participant:hover,
.postane_nonexisting_participant:hover {
  cursor: pointer;
}

#postane_error {
  font-size: 15px;
  background-color: #f00;
  text-align: center;
  color: white;
}

#postane_success {
  font-size: 15px;
  background-color: #0f0;
  text-align: center;
}

#postane_message_more_button,
#postane_thread_more_button {
  cursor: pointer;
  text-align: center;
  background-color: #44749d;
  color: white;
  border: 1px solid #44749d;
  margin-top: 5px;
  margin-bottom: 5px;
}

#postane_message_more_button,
#postane_thread_more_button:hover {
  border: 1px solid #ebe7e0;
  background-color: #5585ae;
}

#postane_messages_topmenu {
  background-color: #44749d;
  color: white;
  padding: 5px 10px;
  margin-bottom: 5px;
  border-radius: 8px;
}

#postane_messages_buttons {
  display: inline-block;
  float: right;
}

#postane_messages_addparticipant_button,
#postane_messages_quit_button,
#postane_messages_participants_button {
  display: inline-block;
  cursor: pointer;
  width: 25px;
}

#postane_messages_title {
  display: inline-block;
}


.postane_message_left {
  padding: 0;
}

.postane_message_right {
  padding: 0;
}

.postane_message_top_div {
  border-bottom: 1px solid #44749d;
}

.postane_user_avatar {
  display: inline-block;
  margin: 0;
  margin-right: 10px;
  width: 35px;
}

.postane_user_avatar img {
  display: block;
  margin: 0;
  padding: 0;
  width: 35px;
}

.postane_username {
  display: inline-block;
  position: relative;
  top: -12px;
  margin: 0;
}

.postane_message {
  padding: 5px 10px;
  margin-bottom: 10px;
}

body:not(.dark-mode) .postane_message {
  background-color: white;
}

.postane_message_date {
  font-size: 10px;
  text-align: right;
  font-style: italic;
}

.postane_messages_delete_button,
.postane_messages_edit_button {
  margin-right: 10px;
  cursor: pointer;
  display: inline-block;
  float: right;
  font-style: italic;
}

.postane_messages_delete_button:hover,
.postane_messages_edit_button:hover {
  text-decoration: underline;
}

.postane_message_content[contenteditable="true"] {
  margin-top: 3px;
  border: 1px solid #44749d;
}

.postane_message_marked_read,
.postane_message_not_read {
  background-color: #eee;
}

.postane_participant_new_array_element,
.postane_participant_array_element {
  border-radius: 7px;
}

#postane_add_participant_container,
#postane_participants_container {
  background-color: #44749d;
  color: white;
  margin: 10px 5px;
}

#postane_add_participant_container {
  padding: 5px 10px;
}

.postane_messages_participants_avatar_column,
.postane_messages_participant_admin_column {
  padding: 5px 10px;
  width: 20px;
  margin: 0 10px;
}

.postane_messages_participants_name_column {
  padding-right: 30px;
}

.postane_messages_participant_header_row {
  background-color: white;
  color: #44749d;
}

.postane_messages_participant_table {
  width: 100%;
}

.postane_messages_participant_table a {
  color: white;
  text-decoration: none;
}

.postane_messages_participant_table a:hover {
  text-decoration: underline;
}

.postane_messages_participant_table .avatar {
  width: 20px;
}

.postane_messages_participant_admin_image {
  width: 20px;
}

.postane_tooltip {
  display: inline-block;
  padding: 3px 7px;
  font-size: 12px;
  color: white;
  background: #44749d;
  border: 2px solid white;
}

#postane_message_email {
  font-size: 11px;
}

#postane_email_checkbox {
  height: 25px;
  background-color: black;
  margin-left: 5px;
  cursor: pointer;
}

.postane_threads_avatar {
  display: inline-block;
  height: 15px;
  width: 15px;
  margin-left: 5px;
}

.postane_threads_avatar img {
  height: 15px;
  width: 15px;
}

.postane_threads_username {
  display: inline-block;
}

.postane_threads_username a {
  color: black;
  text-decoration: none;
}

.postane_threads_username a:hover {
  text-decoration: underline;
}

.postane_thread:hover .postane_threads_username a {
  color: white;
}

.postane_threads_participant {
  display: inline-block;
}

.postane_threads_participant_list {
  margin-top: 5px;
  font-style: italic;
  font-size: 90%;
}

#postane_loading {
  cursor: pointer;
  padding-bottom: 4px;
}

